Fix project card on mobile

--- a/assets/frontend/css/custom.css
+++ b/assets/frontend/css/custom.css
@@ -625,6 +625,11 @@ footer {
         width: 70%;
         transform: translateY(10%);
     }
+
+    .project-card {
+        height: 650px;
+       
+    }
 }
 
 @media (max-width: 576px) {
